fix(button): fix contrast issue by using brand color tokens

--- a/packages/button/theme.module.css
+++ b/packages/button/theme.module.css
@@ -81,8 +81,16 @@
     --scrim-color: var(--brand);
   }
 
-  &.background-dark,
   &.background-brand {
+    --border-color-hovered: transparent;
+    --border-color: rgba(255, 255, 255, 0.24);
+    --scrim-color: var(--white);
+    --scrim-opacity-active: 0.08;
+    --scrim-opacity-hovered: 0.14;
+    --text-color: var(--brand-text-on-primary);
+  }
+
+  &.background-dark {
     --border-color-hovered: transparent;
     --border-color: rgba(255, 255, 255, 0.24);
     --scrim-color: var(--white);
@@ -123,21 +131,16 @@
   --scrim-opacity-hovered: 0;
   --text-color: var(--brand-link);
 
+  &.brand-neutral {
+    --text-color: var(--black);
+  }
+
   &.background-dark {
     --text-color: var(--brand-link-on-dark);
   }
 
   &.background-brand {
-    --text-color: var(--white);
-  }
-
-  &.brand-neutral {
-    --text-color: var(--black);
-
-    &.background-dark,
-    &.background-brand {
-      --text-color: var(--white);
-    }
+    --text-color: var(--brand-text-on-primary);
   }
 
   &[disabled] {
@@ -165,8 +168,11 @@
   --scrim-opacity-hovered: 0;
   --text-color: var(--black);
 
-  &.background-dark,
   &.background-brand {
+    --text-color: var(--brand-text-on-primary);
+  }
+
+  &.background-dark {
     --text-color: var(--white);
   }
 
@@ -195,8 +201,11 @@
   --scrim-opacity-hovered: 1;
   --text-color: var(--gray-3);
 
-  &.background-dark,
   &.background-brand {
+    --text-color: var(--brand-text-on-primary);
+  }
+
+  &.background-dark {
     --text-color: var(--white);
   }
 
